[package]
name = "convert-text-to-image-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.5"
rusttype = "0.9.3"
textwrap = "0.16.0"
reqwest = { version = "0.11.14", features = ["blocking", "json"] }
serde_json = "1.0.93"
chrono = "0.4.23"